# lumina-desk

./: .gitignore  Cargo.toml  Readme.md  sdkconfig.debug
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/controller/: main.rs  setup.rs
