[package]
name = "lumina-desk"
version = "0.1.0"
authors = ["Philip <philip.buechler@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[[bin]]
name = "controller"
path = "src/controller/main.rs"

[[bin]]
name = "light"
path = "src/light/main.rs"

[profile.release]
opt-level = "s"
strip = true
lto = true

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
anyhow = "1.0.77"
esp-idf-hal = "0.42.5"
esp-idf-sys = { version = "0.33.7", features = ["binstart", "std", "native"]}
as5600 = "0.6.0"
button-driver = { version = "0.1.3", features = ["std", "esp"] }
ldproxy = "0.3.2"

[build-dependencies]
embuild = "0.31.3"

# [env]
# ESP_IDF_SDKCONFIG = "sdkconfig.release;sdkconfig.debug"
